# web_manage_install

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: idea-activation.7z  navicat-activation.7z
src-tauri/src/: build.rs  download.rs  env_config.rs  lib.rs  main.rs  types.rs
src-tauri/src/common/: cancel.rs  detection.rs  download.rs  install.rs  mod.rs  process.rs  types.rs  version.rs  version_policy.rs
src-tauri/src/detect/: env_reader.rs  jdk.rs  maven.rs  mod.rs  mysql.rs  node.rs  verify.rs
src-tauri/src/detection/: mod.rs  verify.rs
src-tauri/src/detection/components/: jdk.rs  maven.rs  mod.rs  mysql.rs  node.rs  tomcat.rs
src-tauri/src/detection/env/: command_runner.rs  env_vars.rs  mod.rs  version_parser.rs
src-tauri/src/detection/finder/: find_app_paths.rs  find_common_dirs.rs  find_program_files.rs  find_uninstall.rs  find_where.rs  mod.rs
src-tauri/src/download/: cache.rs  mod.rs  preflight.rs  proxy.rs  service.rs  stream.rs
src-tauri/src/download/sources/: idea.rs  jdk.rs  maven.rs  mod.rs  mysql.rs  navicat.rs  nodejs.rs  redis.rs  (+1 more)
src-tauri/src/install/: commands.rs  mod.rs
src-tauri/src/installers/: bundled.rs  jdk.rs  maven.rs  mod.rs  mysql.rs  node.rs  utils.rs
src-tauri/src/system/: env_broadcast.rs  env_config.rs  env_registry.rs  mod.rs  path_entry.rs
src-tauri/src/version_catalog/: command.rs  jdk.rs  maven.rs  mod.rs  mysql.rs  nodejs.rs  service.rs  tomcat.rs
(+81 files in other folders)
