[package]
name = "dev-env-installer"
version = "1.5.0"
description = "开发环境可视化安装器"
authors = ["you"]
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
zip = "2"
winreg = "0.55"
regex-lite = "0.1.9"
